Arrays.asList -> List.of getInvoice method fixed at frontend